--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="header">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img src="./assets/maxresdefault.jpg" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
       <section class="card" id="html-section">
@@ -23,24 +24,23 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
       </section>
    
       <section class="card" id="git-section">
       <h2>Git</h2>
         <ul>
-          <li>Enter your Git notes here</li>
+          <li>Git status: checks what branch we are currently in</li>
+          <li>Git checkout -b branch-name: creates a new branch and switches to it</li>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <h2>Git</h2>
-          <ul>
-            <li>git status: checks what branch we are currently on</li>
-            <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Enter your Javascript notes here</li>  
         </ul>
       </section>
     </main>
