Added Javascript functionality

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -11,6 +11,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/maxresdefault.jpg" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -40,7 +41,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your Javascript notes here</li>  
+          <li>a variable is simply a named container that allows us to store data in our code.</li>
+          <li>Use inspect and click console on chrome to see info on Javascript</li>  
+          <li>We define topics AFTER we tell the computer to log it in the console.</li>
+          <li>if (condition) {
+            // block of code to be executed if condition is truthy
+            }</li>
         </ul>
       </section>
     </main>
@@ -48,5 +54,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
