--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href=".prework-study-guide/assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="header">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/maxresdefault.jpg" alt="Profile image of cat wearing a bow tie." />
+      <img src=".prework-study-guide/assets/maxresdefault.jpg" alt="Scientist" />
       <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
@@ -54,6 +54,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
-    <script src="./assets/script.js"></script>
+    <script src=".prework-study-guide/assets/script.js"></script>
   </body>
 </html>
